# Dommaster-flet-app

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/pages/: cart.py  catalog.py  favourites.py  home.py  profile.py
src/pages/controllers/: catalog_controllers.py  home_controllers.py
src/pages/utils/: controllers.py  shimmer_effect.py  widgets.py
