[project]
name = "dommaster-flet-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.70.0.dev5591",
  "requests"
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "com.mycompany"
product = "dommaster-flet-app"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"
include_packages = ["requests"]

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.70.0.dev5591",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.70.0.dev5591"}